// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/utils/did-catch should render correctly 1`] = `
<didCatch(Child)>
  <Child>
    <span>
      1
    </span>
  </Child>
</didCatch(Child)>
`;

exports[`core/utils/did-catch should render correctly with Error & Component 1`] = `
<didCatch(Child)>
  <ErrorComponent
    error="TypeError: Cannot read property 'a' of undefined"
  >
    <span>
      error component
    </span>
  </ErrorComponent>
</didCatch(Child)>
`;

exports[`core/utils/did-catch should render correctly with Error 1`] = `<didCatch(Child) />`;
